# brain-training

./: .gitignore  game_evaluation.md  index.html  manifest.json  memo.md  plan.md  sw.js
backend/: Cargo.toml  docker-compose.yml
backend/deploy/: brain-training.service  nginx.conf
backend/migrations/: 001_init.sql  002_add_is_crown.sql  003_add_display_name.sql  004_change_score_to_double.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/auth/: google.rs  jwt.rs
backend/src/handlers/: auth_handler.rs  mod.rs  score_handler.rs
backend/src/models/: mod.rs  score.rs  user.rs
css/: absolute-pitch.css  apple-catch.css  arrow-swipe.css  balance-scale.css  big-number.css  budget-plan.css  card-flip.css  chain-word.css  clock-calc.css  color-code.css  color-match.css  color-seq.css  color-vision.css  common.css  comp-color.css  cube-count.css  day-calc.css  dollar-calc.css  double-detect.css  emoji-cipher.css  emoji-finder.css  emoji-order.css  eq-judge.css  flash-math.css  flash-sudoku.css  frac-cmp.css  go-nogo.css  hi-lo.css  just-stop.css  kanji-quiz.css  leaderboard.css  lights-out.css  make-ten.css  memory-matrix.css  mental-mult.css  mental-nav.css  mirror-path.css  n-back.css  num-order.css  num-tap.css  (+15 more)
js/: absolute-pitch.js  api.js  apple-catch.js  arrow-swipe.js  audio.js  auth.js  balance-scale.js  big-number.js  budget-plan.js  card-flip.js  chain-word.js  clock-calc.js  color-code.js  color-match.js  color-seq.js  color-vision.js  comp-color.js  cube-count.js  day-calc.js  dollar-calc.js  double-detect.js  emoji-cipher.js  emoji-finder.js  (+36 more)
(+6 files in other folders)
